Fix layout issues with scatter plot

--- a/src/visualization/display/side-panel/panels/analysis/poi/select.css
+++ b/src/visualization/display/side-panel/panels/analysis/poi/select.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 800px) {
   .poi__select select {
-    height: auto;
+    height: 100px;
   }
 }
 
